# HM-19

./: CMakeLists.txt  README.md  main.C  query.xml  setting.xml
include/: Bluetooth.H  Exception.H  SerialPort.H  xmlConfiguration.H
src/: Bluetooth.C  SerialPort.C  xmlConfiguration.C
